feat(webpage): pagination, titre de page, garde content-type, diagnostic SPA
- WebPageService.fetchPage : PageSlice (titre, partie X/Y), découpe sur frontière de mot,
  cap de traitement max-total-chars=40000 (10 parties), page clampée, SPA -> IOException diagnostic
- Lire_une_page_web : @ToolParam url/page, en-tête Titre + Partie X/Y, indication de suite
- Synchro ReWOO : PromptBuilder (url, page:int?) et PlannedActionExecutor